# Terminal-Library

./: .gitignore  CMakeLists.txt  README.md
data/: accounts.txt  notifications.txt  pending_resources.txt  resources.txt  transactions.txt
include/: Account.h  AccountManager.h  Admin.h  Article.h  Book.h  Date.h  FileHandler.h  Journal.h  LibrarySystem.h  Member.h  Notification.h  Resource.h  ResourceManager.h  Transaction.h  UserInterface.h  Validator.h
src/: Account.cpp  AccountManager.cpp  Admin.cpp  Article.cpp  Book.cpp  Date.cpp  FileHandler.cpp  Journal.cpp  LibrarySystem.cpp  Member.cpp  Notification.cpp  Resource.cpp  ResourceManager.cpp  Transaction.cpp  UserInterface.cpp  Validator.cpp  main.cpp
